--- a/form.css
+++ b/form.css
@@ -2,16 +2,28 @@
 	border:0px;
 }
 .form{
-	width:670px;
+	width:770px;
+	background-color: #d5dfef;
+}
+button{
+	margin-left: 10px;
+	margin-bottom: 10px;
+}
+h1{
+	font: normal Verdana, Tahoma, sans-serif;
+	margin: 0px;
+	padding-top: 10px;
+	padding-left: 10px;
 }
 label{
 	font: normal 18px/100% Verdana, Tahoma, sans-serif;
+	padding-left: 10px;
 }
-input, textarea{
+input, textarea, select{
 	padding: 5px;
 	margin: 10px;
 	border: solid 1px #C5C5C5;
-	font: normal 13px/100% Verdana, Tahoma, sans-serif;
+	font: normal 15px/100% Verdana, Tahoma, sans-serif;
 	background: #FFFFFF;
 	background: -webkit-gradient(linear, left top, left 4, from(#FFFFFF), color-stop(4%, #EEEEEE), to(#FFFFFF));
 	background: -moz-linear-gradient(top, #FFFFFF, #EEEEEE 0.16px, #FFFFFF 4px);
